openvpn/security_group.tf
resource "aws_security_group" "openvpn" {
  name          = "openvpn-sg"
  description   = "openvpn"
  vpc_id        = var.vpc_id
  
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 1194
    to_port     = 1194
    protocol    = "udp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

    tags = {
        "Name"      = "OpenVPN Security Group"
    }
}
